--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <a href="https://collshp.com/decellis">Meus Achadinhos Shopee</a>
 <a href="https://www.magazinevoce.com.br/magazinedecellis/">Página de Influenciador Magazine Luiza</a>
 <a href="https://amzn.to/49kWhWE">Capa de privacidade para celular, tablet e notebook</a>
-<a href="https://mercadolivre.com/sec/1WTsR7t">Recomendações Mercado Livre</a>
+<a href="https://www.mercadolivre.com.br/social/d20260121130115">Recomendações Mercado Livre</a>
 <a href="https://onelink.shein.com/25/5c4xmdta7h2j">Shein</a>
 </body>
 
