Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <h1>Dê Cellis Vieira Barreto</h1>
 <h2>LINKS OFICIAIS</h2>
 <p>Bem-vinda(o) à minha seleção oficial! Aqui eu reúno apenas os itens que realmente valem o investimento, testados por mim ou com as melhores avaliações do mercado. Navegue pelas categorias abaixo para encontrar os produtos que você viu nos posts e aproveite os melhores preços das minhas lojas parceiras com total segurança.</p>
+<a href="https://shopee.com.br/decellis" target="_blank" rel="noopener noreferrer">Meu bazar pessoal Shopee</a>
 <a href="https://collshp.com/decellis">Meus Achadinhos Shopee</a>
 <a href="https://www.magazinevoce.com.br/magazinedecellis/">Página de Influenciador Magazine Luiza</a>
 <a href="https://amzn.to/49kWhWE">Capa de privacidade para celular, tablet e notebook</a>
-<a href="https://www.mercadolivre.com.br/social/d20260121130115">Recomendações Mercado Livre</a>
+<a href="https://mercadolivre.com/sec/2ubZbQp">Recomendações Mercado Livre</a>
 <a href="https://onelink.shein.com/25/5c4xmdta7h2j">Shein</a>
 </body>
 
