Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,38 @@
 <a href="https://amzn.to/49kWhWE">Capa de privacidade para celular, tablet e notebook</a>
 <a href="https://mercadolivre.com/sec/2ubZbQp">Recomendações Mercado Livre</a>
 <a href="https://onelink.shein.com/25/5c4xmdta7h2j">Shein</a>
+
+
+<h2>LIVROS</H2>
+<p>Melhores títulos para desenvolver o senso crítico.</p>
+<ul>
+  <li><a href="https://amzn.to/3McNhLu">1984</a></li>
+  <li><a href="https://www.amazon.com.br/dp/B08Y34HQGT/ref=cm_sw_r_as_gl_apa_gl_i_2B5RXXBCEC8RREKH7CWV?linkCode=ml1&tag=decellis-20&linkId=110bd369ecc6e6eb1b5dfd0c58e0a8a6">A divina comédia</a></li>
+  <li><a href="https://amzn.to/4rlqPie">A empregada</a></li>
+  <li><a href="https://amzn.to/3ZEnRti">A metamorfose</a></li>
+  <li><a href="https://amzn.to/4k6NDQf">A revolução dos bichos</a></li>
+  <li><a href="https://amzn.to/4k5NnAY">Admirável mundo novo</a></li>
+  <li><a href="https://amzn.to/3Z8PTwT">As 48 leis do poder</a></li>
+  <li><a href="https://amzn.to/4a3Xqly">Como fazer amigos e influenciar pessoas</a></li>
+  <li><a href="https://amzn.to/4qq113P">É assim que começa + É assim que acaba</a></li>
+  <li><a href="https://amzn.to/4rqZH1r">Essencialismo</a></li>
+  <li><a href="https://amzn.to/3McGy4b">Fahrenheit 451</a></li>
+  <li><a href="https://amzn.to/4qTy29A">Manual de persuasão do FBI</a></li>
+  <li><a href="https://amzn.to/4brj0D6">O homem invisível</a></li>
+  <li><a href="https://amzn.to/4qWOZ2L">O príncipe</a></li>
+  <li><a href="https://amzn.to/4ka99nm">O processo</a></li>
+</ul>
+
+<p>Livros de fantasia para você se divertir</p>
+<ul>
+  <li><a href="https://amzn.to/4bqK6u6">Assassin’s Creed</a></li>
+  <li><a href="https://amzn.to/3ZIGJY0">Harry Potter</a></li>
+  <li><a href="https://amzn.to/3NJcLAF">O povo do ar</a></li>
+  <li><a href="https://amzn.to/4c06BGd">O Senhor dos Anéis</a></li>
+  <li><a href="https://amzn.to/4k3tpa6">The Witcher</a></li>
+</ul>
+
+
 </body>
 
 </html>
